github deploy project

--- a/angular.json
+++ b/angular.json
@@ -103,8 +103,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "b8eb5de2-0b2f-43f4-81d9-3d6674f42950"
   }
 }
